# sift-cc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  sift.py
.github/workflows/: ci.yml  release.yml
tests/: test_sift.py
