[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sift-cc"
version = "0.2.1"
description = "Mine your Claude Code conversation archive — search, browse, and extract from past sessions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Simon Mavec" }]
keywords = ["claude", "claude-code", "cli", "search", "archive", "conversations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SimonMav/sift-cc"
Repository = "https://github.com/SimonMav/sift-cc"
Issues = "https://github.com/SimonMav/sift-cc/issues"

[project.scripts]
sift = "sift:main"

[tool.hatch.build.targets.wheel]
only-include = ["sift.py"]

[tool.hatch.build.targets.wheel.sources]
"sift.py" = "sift.py"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E9"]

